--- a/src/Components/Counter/Counter.css
+++ b/src/Components/Counter/Counter.css
@@ -1,4 +1,4 @@
-button {
+/*button {
   background-color: green;
   font-size: 20px;
   padding: 15px 15px;
@@ -20,3 +20,4 @@ button {
   width: 170px;
   color: white;
 }
+*/
